[package]
name = "v86oxide"
version = "0.1.0"
publish = false

[dev-dependencies]
quickcheck = "0.6.2"

[features]
default = []
profiler = []
profiler_instrument = []

[lib]
crate-type = ["cdylib"]
path = "src/rust/lib.rs"

[profile.dev]
lto = false
opt-level = 2
panic = "abort"
overflow-checks = false

[profile.release]
lto = true
incremental = false
panic = "abort"
