[package]
name = "v86"
version = "0.1.0"
publish = false

[features]
default = []
profiler = []

[lib]
crate-type = ["cdylib"]
path = "src/rust/lib.rs"

[profile.test]
lto = false
opt-level = 2
overflow-checks = false

[profile.dev]
lto = false
opt-level = 2
panic = "abort"
overflow-checks = false

[profile.release]
lto = true
opt-level = 3
incremental = false
panic = "abort"
codegen-units = 1

[dependencies]
mimalloc = { version = "0.1.17", default-features = false }
